# IBM_DataScience_Course

./: README.md  pyproject.toml
ds_tools/week6/: DataScienceEcosystem.ipynb
module3/: DS0103EN-Exercise-From-Modeling-to-Evaluation.ipynb  DS0103EN-Exercise-From-Problem-to-Approach.ipynb  DS0103EN-Exercise-From-Understanding-to-Preparation.ipynb  DS0103EN-Review-From-Requirements-to-Collection.ipynb  bamboo_train_tree.dot  bamboo_tree.dot
module4/: PY0101EN-2-3-Sets.ipynb
module5/: Final Assignment Webscraping.ipynb  Final Assignment.ipynb  Final_Assignment Library.ipynb
