[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["Daniel Lemus <dlemus@rocsys.com>"]
readme = "README.md"
packages = [{include = "data_science"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
numpy = "^1.25.1"
pandas = "^2.0.3"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
graphviz = "^0.20.1"
ibm-watson = "^7.0.1"
yfinance = "^0.2.28"
bs4 = "^0.0.1"
html5lib = "^1.1"
lxml = "^4.9.3"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
